--- a/alpine-mariadb-armhf/Dockerfile
+++ b/alpine-mariadb-armhf/Dockerfile
@@ -1,22 +1,11 @@
 FROM yobasystems/alpine:3.10.1-armhf
 
-ARG BUILD_DATE
-ARG VCS_REF
-
 LABEL maintainer="Dominic Taylor <dominic@yobasystems.co.uk>" \
     architecture="arm32v7/armhf" \
-    mariadb-version="10.3.17" \
-    alpine-version="3.10.1" \
-    build="19-Aug-2019" \
     org.opencontainers.image.title="alpine-mariadb" \
     org.opencontainers.image.description="MariaDB Docker image running on Alpine Linux" \
-    org.opencontainers.image.authors="Dominic Taylor <dominic@yobasystems.co.uk>" \
-    org.opencontainers.image.vendor="Yoba Systems" \
-    org.opencontainers.image.version="v10.3.17" \
     org.opencontainers.image.url="https://hub.docker.com/r/yobasystems/alpine-mariadb/" \
-    org.opencontainers.image.source="https://github.com/yobasystems/alpine-mariadb" \
-    org.opencontainers.image.revision=$VCS_REF \
-    org.opencontainers.image.created=$BUILD_DATE
+    org.opencontainers.image.source="https://github.com/yobasystems/alpine-mariadb"
 
 RUN apk add --no-cache mariadb mariadb-client mariadb-server-utils pwgen && \
     rm -f /var/cache/apk/*
