--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,31 @@
-arch:
-  - amd64
-  - arm64
-
+matrix:
+  include:
+   - os: linux
+     arch: amd64
+     env:
+      - arch: amd64
+   - os: linux
+     arch: arm64
+     env:
+      - arch: arm
 services: docker
 
 script:
-  - cd src
-  - make all
+  - docker run --rm --privileged multiarch/qemu-user-static:register
+  - cd ${arch}/ && docker build . --platform ${arch} -t sagu/mariadb-alpine:${arch}
+  #- docker push sagu/mariadb-alpine:${arch}
+  - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin && docker push sagu/mariadb-alpine:${arch}
 
-deploy:
-    provider: script
-    script: bash docker_push
-    on:
-        branch: master
-
+stage: manifest
+tags:
+  - amd64
+script:
+  - mkdir /root/.docker
+  - 'echo -e "{\n    \"experimental\": \"enabled\"\n}\n" >> ~/.docker/config.json'
+  - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+  - docker pull sagu/mariadb-alpine:amd64
+  - docker pull sagu/mariadb-alpine:arm
+  - docker manifest create sagu/mariadb-alpine:latest sagu/mariadb-alpine:amd64 sagu/mariadb-alpine:arm
+  - docker manifest annotate sagu/mariadb-alpine:latest sagu/mariadb-alpine:amd64 --os linux --arch amd64
+  - docker manifest annotate sagu/mariadb-alpine:latest sagu/mariadb-alpine:arm --os linux --arch arm
+  - docker manifest push sagu/mariadb-alpine:latest
