--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ services: docker
 script:
   - export arch=$(dpkg --print-architecture)
   - if [[ $arch == arm* ]] ; then export arch=arm; fi
+  - mkdir ~/.docker
   - 'echo -e "{\n    \"experimental\": \"enabled\"\n}\n" >> ~/.docker/config.json'
   - docker run --rm --privileged multiarch/qemu-user-static:register
   - cd ${arch}/ && docker build . --platform ${arch} -t sagu/mariadb-alpine:${arch}
