--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,13 @@ arch:
   - amd64
   - arm64
 services: docker
+sudo: required
 
 script:
   - export arch=$(dpkg --print-architecture)
   - if [[ $arch == arm* ]] ; then export arch=arm; fi
-  - mkdir ~/.docker
-  - 'echo -e "{\n    \"experimental\": \"enabled\"\n}\n" >> ~/.docker/config.json'
+  - sudo service docker stop
+  - dockerd --experimental
   - docker run --rm --privileged multiarch/qemu-user-static:register
   - cd ${arch}/ && docker build . --platform ${arch} -t sagu/mariadb-alpine:${arch}
   #- docker push sagu/mariadb-alpine:${arch}
