--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ script:
   - cd ${arch}/ && docker build . --platform ${arch} -t sagu/mariadb-alpine:${arch}
   #- docker push sagu/mariadb-alpine:${arch}
   - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin && docker push sagu/mariadb-alpine:${arch}
+  - kill %1
 
 jobs:
   include:
