--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ script:
   #- docker push sagu/mariadb-alpine:${arch}
   - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin && docker push sagu/mariadb-alpine:${arch}
   - kill %1
+  - set +e
+  - pkill -9 -P $$ &> /dev/null || true
+  - exit $1
 
 jobs:
   include:
