--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,18 @@
 os: linux
-arch: 
+#arch:
+#  - amd64
+#  - arm64
+env:
   - amd64
-  - arm64
+  - arm
 services: docker
 
 script:
-  - export arch=$(dpkg --print-architecture)
-  - if [[ $arch == arm* ]] ; then export arch=arm; fi
+  #- export arch=$(dpkg --print-architecture)
+  #- if [[ $arch == arm* ]] ; then export arch=arm; fi
   - sudo service docker stop
   - sudo dockerd --experimental &
-  #- docker run --rm --privileged multiarch/qemu-user-static:register
+  - docker run --rm --privileged multiarch/qemu-user-static:register
   - cd ${arch}/ && docker build . --platform ${arch} -t sagu/mariadb-alpine:${arch}
   #- docker push sagu/mariadb-alpine:${arch}
   - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin && docker push sagu/mariadb-alpine:${arch}
