--- a/.travis.yml
+++ b/.travis.yml
@@ -16,17 +16,17 @@ script:
   - cd ${arch}/ && docker build . --platform ${arch} -t sagu/mariadb-alpine:${arch}
   #- docker push sagu/mariadb-alpine:${arch}
   - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin && docker push sagu/mariadb-alpine:${arch}
-  - kill %1
-  - set +e
-  - pkill -9 -P $$ &> /dev/null || true
-  - exit 0
+  #- kill %1
+  #- set +e
+  #- pkill -9 -P $$ &> /dev/null || true
+  #- exit 0
 
 jobs:
   include:
     - stage: deploy
       script:
-        - mkdir /root/.docker
-        - 'echo -e "{\n    \"experimental\": \"enabled\"\n}\n" >> ~/.docker/config.json'
+        - sudo service docker stop
+        - sudo dockerd --experimental &
         - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
         - docker pull sagu/mariadb-alpine:amd64
         - docker pull sagu/mariadb-alpine:arm
