--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,14 @@ services: docker
 script:
   #- export arch=$(dpkg --print-architecture)
   #- if [[ $arch == arm* ]] ; then export arch=arm; fi
+  - wget https://github.com/docker/buildx/releases/download/v0.3.1/buildx-v0.3.1.linux-amd64 -O ~/.docker/cli-plugins/docker-buildx
+  - chmod a+x ~/.docker/cli-plugins/docker-buildx
   - sudo service docker stop
   - sudo dockerd --experimental &
   - docker run --rm --privileged multiarch/qemu-user-static:register
-  - cd ${arch}/ && docker build . --platform ${arch} -t sagu/mariadb-alpine:${arch}
+  #- cd ${arch}/ && docker build . --platform ${arch} -t sagu/mariadb-alpine:${arch}
+  - if [[ $arch == amd* ]] ; then cd ${arch}/ && docker build . --platform ${arch} -t sagu/mariadb-alpine:${arch} ; fi
+  - if [[ $arch == arm* ]] ; then cd ${arch}/ && docker buildx build --platform linux/arm/v7 -t sagu/mariadb-alpine:${arch} . ; fi
   #- docker push sagu/mariadb-alpine:${arch}
   - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin && docker push sagu/mariadb-alpine:${arch}
   #- kill %1
@@ -25,6 +29,8 @@ jobs:
   include:
     - stage: deploy
       script:
+        - wget https://github.com/docker/buildx/releases/download/v0.3.1/buildx-v0.3.1.linux-amd64 -O ~/.docker/cli-plugins/docker-buildx
+        - chmod a+x ~/.docker/cli-plugins/docker-buildx
         - sudo service docker stop
         - sudo dockerd --experimental &
         - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
