--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ os: linux
 env:
   - arch: amd64
   - arch: arm
+services: docker
 
 before_install:
   - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
