--- a/.travis.yml
+++ b/.travis.yml
@@ -15,19 +15,19 @@ before_install:
 script:
   #- export arch=$(dpkg --print-architecture)
   #- if [[ $arch == arm* ]] ; then export arch=arm; fi
-  - mkdir -p ~/.docker/cli-plugins
+  - sudo mkdir -p ~/.docker/cli-plugins
   - wget -q https://github.com/docker/buildx/releases/download/v0.3.1/buildx-v0.3.1.linux-amd64 -O ~/.docker/cli-plugins/docker-buildx
-  - chmod a+x ~/.docker/cli-plugins/docker-buildx
+  - sudo chmod a+x ~/.docker/cli-plugins/docker-buildx
   - sudo service docker stop
   - sudo dockerd --experimental &
   - sudo docker run --rm --privileged multiarch/qemu-user-static:register
   - sudo docker buildx create --name mybuilder
   - sudo docker buildx use mybuilder
   #- cd ${arch}/ && docker build . --platform ${arch} -t sagu/mariadb-alpine:${arch}
-  - if [[ $arch == amd* ]] ; then cd ${arch}/ && docker build . --platform ${arch} -t sagu/mariadb-alpine:${arch} ; fi
-  - if [[ $arch == arm* ]] ; then cd ${arch}/ && docker buildx build --platform linux/arm/v7 -t sagu/mariadb-alpine:${arch} . ; fi
+  - if [[ $arch == amd* ]] ; then cd ${arch}/ && sudo docker build . --platform ${arch} -t sagu/mariadb-alpine:${arch} ; fi
+  - if [[ $arch == arm* ]] ; then cd ${arch}/ && sudo docker buildx build --platform linux/arm/v7 -t sagu/mariadb-alpine:${arch} . ; fi
   #- docker push sagu/mariadb-alpine:${arch}
-  - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin && docker push sagu/mariadb-alpine:${arch}
+  - echo "$DOCKERHUB_PASSWORD" | sudo docker login -u "$DOCKERHUB_USERNAME" --password-stdin && docker push sagu/mariadb-alpine:${arch}
   #- kill %1
   #- set +e
   #- pkill -9 -P $$ &> /dev/null || true
