--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ script:
   - sudo service docker stop
   - sudo dockerd --experimental &
   - sudo docker run --rm --privileged multiarch/qemu-user-static:register
+  - sudo apt-get install qemu-user-static -y
   - sudo docker buildx create --name mybuilder
   - sudo docker buildx use mybuilder
   #- cd ${arch}/ && docker build . --platform ${arch} -t sagu/mariadb-alpine:${arch}
