--- a/.travis.yml
+++ b/.travis.yml
@@ -15,13 +15,15 @@ before_install:
 script:
   #- export arch=$(dpkg --print-architecture)
   #- if [[ $arch == arm* ]] ; then export arch=arm; fi
+  - export DOCKER_CLI_EXPERIMENTAL=enabled
   - mkdir -p ~/.docker/cli-plugins
   - wget -q https://github.com/docker/buildx/releases/download/v0.3.1/buildx-v0.3.1.linux-amd64 -O ~/.docker/cli-plugins/docker-buildx
   - chmod a+x ~/.docker/cli-plugins/docker-buildx
   - sudo service docker stop
   - sudo dockerd --experimental &
   - echo "$DOCKERHUB_PASSWORD" | sudo docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-  - sudo apt-get install qemu qemu-user-static binfmt-support -y
+  - sudo apt install -y -qq qemu qemu-user-static binfmt-support
+  - sudo update-binfmts --display
   - sudo docker buildx create --name mybuilder
   - sudo docker buildx use mybuilder
   - sudo docker buildx inspect --bootstrap
