--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ script:
   #- cd ${arch}/ && docker build . --platform ${arch} -t sagu/mariadb-alpine:${arch}
   - if [[ $arch == amd* ]] ; sudo docker buildx build --platform linux/amd64 -t sagu/mariadb-alpine:${arch} . --push; fi
   - if [[ $arch == arm* ]] ; sudo docker buildx build --platform linux/arm/v7 -t sagu/mariadb-alpine:${arch} . --push; fi
-  - if [[ $arch == i38* ]] ; sudo docker buildx build --platform linux/i386 -t sagu/mariadb-alpine:${arch} . --push; fi
+  - if [[ $arch == i38* ]] ; sudo docker buildx build --platform linux/386 -t sagu/mariadb-alpine:${arch} . --push; fi
 
 jobs:
   include:
@@ -43,5 +43,5 @@ jobs:
         - docker manifest create sagu/mariadb-alpine:latest sagu/mariadb-alpine:amd64 sagu/mariadb-alpine:arm
         - docker manifest annotate sagu/mariadb-alpine:latest sagu/mariadb-alpine:amd64 --os linux --arch amd64
         - docker manifest annotate sagu/mariadb-alpine:latest sagu/mariadb-alpine:arm --os linux --arch arm
-        - docker manifest annotate sagu/mariadb-alpine:latest sagu/mariadb-alpine:i386 --os linux --arch i386
+        - docker manifest annotate sagu/mariadb-alpine:latest sagu/mariadb-alpine:i386 --os linux --arch 386
         - docker manifest push sagu/mariadb-alpine:latest
