--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ os: linux
 env:
   - arch: amd64
   - arch: arm
-  - arch: i386
+  - arch: 386
 
 before_install:
   - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
@@ -28,7 +28,7 @@ script:
   #- cd ${arch}/ && docker build . --platform ${arch} -t sagu/mariadb-alpine:${arch}
   - if [[ $arch == amd* ]] ; then sudo docker buildx build --platform linux/amd64 -t sagu/mariadb-alpine:${arch} . --push; fi
   - if [[ $arch == arm* ]] ; then sudo docker buildx build --platform linux/arm/v7 -t sagu/mariadb-alpine:${arch} . --push; fi
-  - if [[ $arch == i38* ]] ; then sudo docker buildx build --platform linux/386 -t sagu/mariadb-alpine:${arch} . --push; fi
+  - if [[ $arch == 38* ]] ; then sudo docker buildx build --platform linux/386 -t sagu/mariadb-alpine:${arch} . --push; fi
 
 jobs:
   include:
@@ -44,5 +44,5 @@ jobs:
         - docker manifest create sagu/mariadb-alpine:latest sagu/mariadb-alpine:amd64 sagu/mariadb-alpine:arm
         - docker manifest annotate sagu/mariadb-alpine:latest sagu/mariadb-alpine:amd64 --os linux --arch amd64
         - docker manifest annotate sagu/mariadb-alpine:latest sagu/mariadb-alpine:arm --os linux --arch arm
-        - docker manifest annotate sagu/mariadb-alpine:latest sagu/mariadb-alpine:i386 --os linux --arch 386
+        - docker manifest annotate sagu/mariadb-alpine:latest sagu/mariadb-alpine:386 --os linux --arch 386
         - docker manifest push sagu/mariadb-alpine:latest
