--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -12,11 +12,12 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v1
+    # https://github.com/docker/setup-qemu-action
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+    # https://github.com/docker/setup-buildx-action
     - name: Set up Docker Buildx
-      id: buildx
-      uses: crazy-max/ghaction-docker-buildx@v1
-      with:
-        version: latest
+      uses: docker/setup-buildx-action@v1
     - name: Available platforms
       run: echo ${{ steps.buildx.outputs.platforms }}
     - name: Login
@@ -33,7 +34,7 @@ jobs:
         docker buildx build --platform linux/amd64 -t sagu/mariadb-alpine:amd64 . --push
     - name: Latest
       run: |
-        docker manifest create sagu/mariadb-alpine:latest
+        docker manifest create sagu/mariadb-alpine:latest sagu/mariadb-alpine:amd64 sagu/mariadb-alpine:arm 
         docker manifest annotate sagu/mariadb-alpine:latest sagu/mariadb-alpine:amd64 --os linux --arch amd64
         docker manifest annotate sagu/mariadb-alpine:latest sagu/mariadb-alpine:arm --os linux --arch arm
         docker manifest annotate sagu/mariadb-alpine:latest sagu/mariadb-alpine:386 --os linux --arch 386
