--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -17,6 +17,7 @@ jobs:
       uses: docker/setup-qemu-action@v1
     # https://github.com/docker/setup-buildx-action
     - name: Set up Docker Buildx
+      id: buildx
       uses: docker/setup-buildx-action@v1
     - name: Available platforms
       run: echo ${{ steps.buildx.outputs.platforms }}
@@ -34,7 +35,7 @@ jobs:
         docker buildx build --platform linux/amd64 -t sagu/mariadb-alpine:amd64 . --push
     - name: Latest
       run: |
-        docker manifest create sagu/mariadb-alpine:latest sagu/mariadb-alpine:amd64 sagu/mariadb-alpine:arm 
+        docker manifest create sagu/mariadb-alpine:latest sagu/mariadb-alpine:amd64 sagu/mariadb-alpine:arm sagu/mariadb-alpine:386
         docker manifest annotate sagu/mariadb-alpine:latest sagu/mariadb-alpine:amd64 --os linux --arch amd64
         docker manifest annotate sagu/mariadb-alpine:latest sagu/mariadb-alpine:arm --os linux --arch arm
         docker manifest annotate sagu/mariadb-alpine:latest sagu/mariadb-alpine:386 --os linux --arch 386
