--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,20 +22,11 @@ jobs:
         with:
           username: jubilee2
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Run Buildx arm
-        run: |
-          docker buildx build --platform linux/arm/v7 -t jubilee2/mariadb-alpine:arm . --push
-      - name: Run Buildx 386
-        run: |
-          docker buildx build --platform linux/386 -t jubilee2/mariadb-alpine:386 . --push
-      - name: Run Buildx amd64
-        run: |
-          docker buildx build --platform linux/amd64 -t jubilee2/mariadb-alpine:amd64 . --push
-      - name: Latest
-        run: |
-          docker manifest create jubilee2/mariadb-alpine:latest jubilee2/mariadb-alpine:amd64 jubilee2/mariadb-alpine:arm jubilee2/mariadb-alpine:386
-          docker manifest annotate jubilee2/mariadb-alpine:latest jubilee2/mariadb-alpine:amd64 --os linux --arch amd64
-          docker manifest annotate jubilee2/mariadb-alpine:latest jubilee2/mariadb-alpine:arm --os linux --arch arm
-          docker manifest annotate jubilee2/mariadb-alpine:latest jubilee2/mariadb-alpine:386 --os linux --arch 386
-          docker manifest push jubilee2/mariadb-alpine:latest
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64, linux/arm/v7
+          push: true
+          tags: jubilee2/rpi-mariadb:latest
 
