--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -2,42 +2,42 @@ name: git
 
 on:
   push:
-  schedule:
-    # 12:05 četrtek
-    - cron:  '5 12 * * 4'
+    tags:
+      - "v*.*.*"
 
 jobs:
-  git:
+  docker:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v1
-    # https://github.com/docker/setup-qemu-action
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
-    # https://github.com/docker/setup-buildx-action
-    - name: Set up Docker Buildx
-      id: buildx
-      uses: docker/setup-buildx-action@v1
-    - name: Available platforms
-      run: echo ${{ steps.buildx.outputs.platforms }}
-    - name: Login
-      run: |
-        docker login -u sagu -p ${{ secrets.DH_PASS }}
-    - name: Run Buildx arm
-      run: |
-        docker buildx build --platform linux/arm/v7 -t sagu/mariadb-alpine:arm . --push
-    - name: Run Buildx 386
-      run: |
-        docker buildx build --platform linux/386 -t sagu/mariadb-alpine:386 . --push
-    - name: Run Buildx amd64
-      run: |
-        docker buildx build --platform linux/amd64 -t sagu/mariadb-alpine:amd64 . --push
-    - name: Latest
-      run: |
-        docker manifest create sagu/mariadb-alpine:latest sagu/mariadb-alpine:amd64 sagu/mariadb-alpine:arm sagu/mariadb-alpine:386
-        docker manifest annotate sagu/mariadb-alpine:latest sagu/mariadb-alpine:amd64 --os linux --arch amd64
-        docker manifest annotate sagu/mariadb-alpine:latest sagu/mariadb-alpine:arm --os linux --arch arm
-        docker manifest annotate sagu/mariadb-alpine:latest sagu/mariadb-alpine:386 --os linux --arch 386
-        docker manifest push sagu/mariadb-alpine:latest
-        
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Get tag
+        id: tag
+        uses: dawidd6/action-get-tag@v1
+      # https://github.com/docker/setup-buildx-action#with-qemu
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Available platforms
+        run: echo ${{ steps.buildx.outputs.platforms }}
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: jubilee2
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64, linux/arm/v7
+          push: true
+          tags: jubilee2/rpi-mariadb:${{steps.tag.outputs.tag}}
+      - name: Build and push (latest)
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64, linux/arm/v7
+          push: true
+          tags: jubilee2/rpi-mariadb:latest
